--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/book
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.error.include-message=always
+#spring.datasource.url=jdbc:mysql://localhost:3306/bookie
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+##spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#server.error.include-message=always
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.timeout=1000
+#spring.cache.redis.cache-null-values=false
 
 
 
